# umami-sqlite

./: .gitattributes  1.40.0.patch  1.40.patch  2.10.2.patch  2.11.1.patch  2.11.2.patch  2.11.3.patch  2.12.1.patch  2.13.2.patch  2.14.0.patch  2.15.1.patch  2.17.0.patch  2.18.1.patch  2.19.0.patch  2.2.0.patch  2.4.1.patch  2.7.0.patch  2.9.0.patch  3.0.2.patch  3.0.3.patch  LICENSE  README.md
.github/workflows/: docker.yml  release.yml
create/: pnpm-lock.yaml
create/db/sqlite/: prisma-adapter-sqlite.patch
create/db/sqlite/data-migrations/: convert-utm-clid-columns.js  populate-revenue-table.sql
create/db/sqlite/ext/: CMakeLists.txt  build.js
create/db/sqlite/ext/src/: regexp.c
create/prisma/: schema.prisma
create/prisma/migrations/01_init/: migration.sql
create/prisma/migrations/02_1_unixepoch_availability/: migration.sql
create/prisma/migrations/02_report_schema_session_data/: migration.sql
create/prisma/migrations/04_1_indexes_tables/: migration.sql
create/prisma/migrations/04_team_redesign/: migration.sql
create/prisma/migrations/05_add_visit_id/: migration.sql
create/prisma/migrations/06_session_data/: migration.sql
create/prisma/migrations/07_add_tag/: migration.sql
create/prisma/migrations/08_1_datetime/: migration.sql
examples/: docker-compose.yml  umami-pod-terraform.tf  umami-pod.yml
migrate-v1-v2/: README.md  data-migration-v2.sql  migrate.js
patches/: 1-dependencies.patch  2-sqlite.patch  3-raw.patch  4-cohort-optim.patch  5-misc.patch  6-dockerfile.patch
scripts/migrate-v1-v2/: v2.sql
(+12 files in other folders)
